src/test/deca/context/invalid/class/invalid_protected_field_access_in_class.deca
// Description:
//    Access to a protected object field in class
//    Test rule 3.66
//
// Result:
// [Begin Result]
//invalid_protected_field_access_in_class.deca:18:18: Protected field access not authorized. Rule 3.66.
// [End Result]
//
// History:
//    created on 15/01/2025
class Dummy {
    protected int c ;
}

class Test {
    Dummy dummy = new Dummy();
    int a = dummy.c;
}

{
}
